--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ header{
 }
 .logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
 .logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff;margin:0;font-family:var(--font-title);}
+.logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
 /* NAV */
@@ -42,11 +42,11 @@ nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 
-/* HERO BANNERS */
+/* HERO - BANNERS */
 .hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
 .banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0;}
 .banner img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .5s ease;}
-.banner img:hover{transform:scale(1.05);}
+.banner img:hover{ transform:scale(1.05); }
 .scroll-indicator{display:none;position:absolute;right:10px;bottom:10px;font-size:1.2rem;background:rgba(0,0,0,0.5);color:#fff;padding:0.3rem 0.6rem;border-radius:4px;z-index:10;}
 @media(max-width:1024px){
   .hero-banners{flex-wrap: nowrap;overflow-x:auto;scroll-snap-type:x mandatory;-webkit-overflow-scrolling: touch;}
@@ -77,7 +77,7 @@ section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 /* FOOTER */
 footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
 
-/* MODAL */
+/* MODAL PERFUMES/ROPA */
 .modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;padding:20px}
 .modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
@@ -87,13 +87,11 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 .modal-right h2{font-size:1.6rem;color:var(--color-primary);border-bottom:1px solid var(--color-accent);padding-bottom:10px;margin-bottom:10px; font-family: var(--font-title);}
 .modal-right p{margin-bottom:5px;font-size:1rem;color:#444;}
 .price{color:#000;font-weight:bold;font-size:1.2rem}
-
 /* Variantes de talla */
 .ml-options{display:flex;gap:10px;margin:10px 0;}
 .ml-option{flex:1;text-align:center;padding:10px;border:1px solid var(--color-accent);border-radius:20px;cursor:pointer;transition:all .3s;font-size:0.9rem;background:#f9f9f9;color:#333;}
 .ml-option:hover{border-color:#000;}
 .ml-option.active{background:#000;color:#fff;border-color:#000;}
-
 /* Cantidad con botones */
 .quantity-control{display:flex;align-items:center;gap:10px;margin:10px 0;}
 .quantity-btn{background:#000;color:#fff;border:none;width:35px;height:35px;border-radius:50%;font-size:1.2rem;cursor:pointer;transition:all .3s}
@@ -119,9 +117,9 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </div>
   <nav>
     <ul>
-      <li><a href="index.html" class="active">Inicio</a></li>
+      <li><a href="index.html" id="homeLink">Inicio</a></li>
       <li><a href="#ropa">Ropa</a></li>
-      <li><a href="perfumes.html">Perfumes</a></li>
+      <li><a href="perfumes.html" id="perfumesLink">Perfumes</a></li>
       <li><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
@@ -192,9 +190,9 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 // Productos ropa
 const ropaProducts = [
    {id:1,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
-   {id:2,name:"Playera Oversize Blanca 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERABLANCA1.png",keywords:"playera blanca oversize"},
-   {id:3,name:"Playera Oversize Gris 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERAGRIS1.png",keywords:"playera gris oversize"},
-   {id:4,name:"Playera Oversize Azul 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERAAZUL1.png",keywords:"playera azul oversize"},
+   {id:2,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:3,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:4,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
 
 // Renderizar productos
@@ -233,42 +231,65 @@ window.addEventListener('scroll', ()=>{
   lastY = y<=0?0:y;
 });
 
+// Nav active
+const navLinks = document.querySelectorAll('nav a');
+const currentPage = window.location.pathname.split("/").pop();
+navLinks.forEach(link=>{
+  const linkPage = link.getAttribute('href').split("/").pop();
+  if(linkPage===currentPage || (linkPage==="index.html" && currentPage==="")) link.classList.add('active');
+  if(link.id==='perfumesLink') link.classList.add('active'); // Mantener color al ir a perfumes
+});
+
 // Modal
 const modal = document.getElementById("productModal");
 const modalImage = document.getElementById("modalImage");
 const modalTitle = document.getElementById("modalTitle");
 const modalDescription = document.getElementById("modalDescription");
 const modalPrice = document.getElementById("modalPrice");
-const closeBtn = modal.querySelector('.close');
+const modalClose = document.querySelector(".close");
+const decreaseBtn = document.getElementById("decrease");
+const increaseBtn = document.getElementById("increase");
+const quantityInput = document.getElementById("quantity");
+const addCartBtn = document.querySelector(".add-cart");
+const mlOptions = document.querySelectorAll(".ml-option");
 
 function openModal(product){
-  modal.style.display='flex';
-  modalImage.src=product.image;
-  modalTitle.textContent=product.name;
-  modalDescription.textContent=product.description;
-  modalPrice.textContent=product.price;
-  quantityInput.value=1;
-  document.querySelectorAll('.ml-option').forEach(o=>o.classList.remove('active'));
-  document.querySelector('.ml-option').classList.add('active');
+  modal.style.display="flex";
+  modalImage.src = product.image;
+  modalTitle.textContent = product.name;
+  modalDescription.textContent = product.description;
+  modalPrice.textContent = product.price;
+  quantityInput.value = 1;
+  mlOptions.forEach(opt=>opt.classList.remove("active"));
+  mlOptions[0].classList.add("active");
 }
 
-closeBtn.addEventListener('click', ()=>modal.style.display='none');
-window.addEventListener('click', e=>{ if(e.target==modal) modal.style.display='none'; });
+modalClose.addEventListener("click", ()=>modal.style.display="none");
+window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none";});
 
-// Cantidad
-const quantityInput = document.getElementById('quantity');
-document.getElementById('increase').addEventListener('click', ()=>{quantityInput.value=parseInt(quantityInput.value)+1});
-document.getElementById('decrease').addEventListener('click', ()=>{if(quantityInput.value>1)quantityInput.value=parseInt(quantityInput.value)-1});
+decreaseBtn.addEventListener("click", ()=>{
+  let val = parseInt(quantityInput.value);
+  if(val>1) quantityInput.value = val-1;
+});
+increaseBtn.addEventListener("click", ()=>{
+  let val = parseInt(quantityInput.value);
+  quantityInput.value = val+1;
+});
 
-// Tallas
-document.querySelectorAll('.ml-option').forEach(el=>{
-  el.addEventListener('click', ()=>{
-    document.querySelectorAll('.ml-option').forEach(o=>o.classList.remove('active'));
-    el.classList.add('active');
-    modalPrice.textContent='$'+el.dataset.price;
+mlOptions.forEach(opt=>{
+  opt.addEventListener("click", ()=>{
+    mlOptions.forEach(o=>o.classList.remove("active"));
+    opt.classList.add("active");
+    modalPrice.textContent = "$220.00"; // Mantener signo pesos
   });
 });
-</script>
 
+addCartBtn.addEventListener("click", ()=>{
+  const cantidad = quantityInput.value;
+  const variant = document.querySelector(".ml-option.active").textContent;
+  alert(`Agregado al carrito: ${modalTitle.textContent} - Talla: ${variant} - Cantidad: ${cantidad}`);
+  modal.style.display="none";
+});
+</script>
 </body>
 </html>
