--- a/perfumes.html
+++ b/perfumes.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Perfumes - EREBUS</title>
+<link href="https://fonts.googleapis.com/css2?family=Neblina&display=swap" rel="stylesheet">
 <style>
 :root{
   --color-primary:#000;
@@ -16,21 +17,25 @@
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px}
 
-/* HEADER */
-header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:var(--color-background);z-index:1000;transition:all .3s ease;}
-.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
-.logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
+/* ===== HEADER COMÚN ===== */
+header{
+  position:fixed;top:0;left:0;width:100%;
+  background:var(--color-primary);color:var(--color-background);z-index:1000;
+  transition:all .3s ease;
+}
+.logo-container{
+  display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s;
+}
+.logo-container img{height:50px;margin-right:10px;}
+.logo-container h1{font-family:var(--font-title);font-size:1.8rem;color:#fff;margin:0;}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
-
-/* NAV */
 nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 
 /* MAIN PERFUMES */
 main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
-h1{margin-bottom:40px;margin-top:0; font-family: var(--font-title);}
+h1{margin-bottom:40px;margin-top:0;font-family: var(--font-title);}
 
 /* Grid responsivo */
 .perfumes{display:grid;gap:20px;justify-items:center;grid-template-columns:repeat(2,1fr);}
@@ -57,7 +62,6 @@ h1{margin-bottom:40px;margin-top:0; font-family: var(--font-title);}
 .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center;overflow:auto;padding:20px}
 .modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-
 .modal-left, .modal-right{flex:1;position:relative}
 .modal-left img{width:100%;height:100%;object-fit:cover;display:block;border-radius:12px;}
 .modal-right{display:flex;flex-direction:column;justify-content:center;gap:15px;padding:30px;text-align:left}
@@ -91,10 +95,12 @@ h1{margin-bottom:40px;margin-top:0; font-family: var(--font-title);}
   .modal-left img{height:280px;object-fit:cover;}
   .modal-right{padding:20px;}
 }
+
 footer{text-align:center;padding:20px;font-size:0.9rem;background:#f9f9f9;margin-top:40px;color:#666;}
 </style>
 </head>
 <body>
+
 <header id="mainHeader">
   <div class="logo-container">
     <img src="images/LOGOE.png" alt="Logo EREBUS">
@@ -193,41 +199,28 @@ function openModal(product){
   modalDescription.textContent = product.description;
   modalPrice.textContent = product.price60;
   document.getElementById("quantity").value = 1; 
-  document.querySelectorAll(".ml-option").forEach(opt=>opt.classList.remove("active"));
-  const firstOption = document.querySelector(".ml-option[data-ml='60ml']");
-  firstOption.classList.add("active");
+  document.querySelectorAll(".ml-option").forEach(el=>el.classList.remove("active"));
+  document.querySelector(".ml-option").classList.add("active");
 }
+closeModal.onclick = ()=> modal.style.display="none";
+window.onclick = (e)=>{if(e.target==modal) modal.style.display="none"}
 
-// Cerrar modal
-closeModal.addEventListener("click", ()=>modal.style.display="none");
-window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none";});
-
-// Cantidad
-const decreaseBtn = document.getElementById("decrease");
-const increaseBtn = document.getElementById("increase");
-const quantityInput = document.getElementById("quantity");
-
-decreaseBtn.addEventListener("click", ()=>{let val=parseInt(quantityInput.value);if(val>1)quantityInput.value=val-1;});
-increaseBtn.addEventListener("click", ()=>{let val=parseInt(quantityInput.value);quantityInput.value=val+1;});
-
-// Selección de ml
-document.querySelectorAll(".ml-option").forEach(opt=>{
-  opt.addEventListener("click", ()=>{
-    document.querySelectorAll(".ml-option").forEach(o=>o.classList.remove("active"));
-    opt.classList.add("active");
-    const currentProduct = perfumes.find(p=>p.name===modalTitle.textContent);
-    modalPrice.textContent = opt.dataset.ml==="60ml" ? currentProduct.price60 : currentProduct.price120;
+// Opciones y cantidad
+document.querySelectorAll(".ml-option").forEach(el=>{
+  el.addEventListener("click",()=>{
+    document.querySelectorAll(".ml-option").forEach(el2=>el2.classList.remove("active"));
+    el.classList.add("active");
+    const productName = modalTitle.textContent;
+    const product = perfumes.find(p=>p.name===productName);
+    modalPrice.textContent = el.dataset.ml==="60ml"?product.price60:product.price120;
   });
 });
-
-// Header scroll
-const header = document.getElementById('mainHeader');
-let lastY=0;
-window.addEventListener('scroll', ()=>{
-  const y = window.pageYOffset || document.documentElement.scrollTop;
-  if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
-  lastY = y<=0?0:y;
-});
+document.getElementById("increase").onclick = ()=> document.getElementById("quantity").value = parseInt(document.getElementById("quantity").value)+1;
+document.getElementById("decrease").onclick = ()=> {
+  let val = parseInt(document.getElementById("quantity").value);
+  if(val>1) document.getElementById("quantity").value=val-1;
+}
 </script>
+
 </body>
 </html>
