--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ nav a.active{color:#e0e0e0;border-bottom:2px solid var(--color-accent);}
 .search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
 #clearBtn{font-size:24px;cursor:pointer;margin-right:10px;color:#555;display:none;user-select:none}
 .search-bar{display:flex;flex:1;border:1px solid var(--color-accent);border-radius:4px;overflow:hidden;align-items:center;background:#fff}
-.search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16px}
+.search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16}
 .search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
 
 /* ROPA - PRODUCTOS */
@@ -77,7 +77,7 @@ section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 /* FOOTER */
 footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
 
-/* MODAL PERFUMES/ROPA */
+/* MODAL */
 .modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;padding:20px}
 .modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:12px;overflow:hidden;flex-direction:row;position:relative;box-shadow:0 10px 30px rgba(0,0,0,.3);animation:fadeIn .3s ease;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
@@ -244,12 +244,16 @@ const modalImage = document.getElementById("modalImage");
 const modalTitle = document.getElementById("modalTitle");
 const modalDescription = document.getElementById("modalDescription");
 const modalPrice = document.getElementById("modalPrice");
-const modalClose = document.querySelector(".close");
 const decreaseBtn = document.getElementById("decrease");
 const increaseBtn = document.getElementById("increase");
 const quantityInput = document.getElementById("quantity");
 const addCartBtn = document.querySelector(".add-cart");
 const mlOptions = document.querySelectorAll(".ml-option");
+
+// Cerrar modal con tache
+modal.querySelector(".close").addEventListener("click", ()=> modal.style.display="none");
+// Cerrar modal al click fuera
+window.addEventListener("click", e=>{if(e.target===modal) modal.style.display="none"})
 
 function openModal(product){
   modal.style.display="flex";
@@ -261,9 +265,6 @@ function openModal(product){
   mlOptions.forEach(opt=>opt.classList.remove("active"));
   mlOptions[0].classList.add("active");
 }
-
-modalClose.addEventListener("click", ()=>modal.style.display="none");
-window.addEventListener("click", e=>{if(e.target==modal) modal.style.display="none";});
 
 decreaseBtn.addEventListener("click", ()=>{
   let val = parseInt(quantityInput.value);
