--- a/index.html
+++ b/index.html
@@ -187,13 +187,12 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 <script>
 // Aquí va tu JavaScript para llenar productos y abrir modal
 const products = [
-  {id:1,name:"Playera Negra",desc:"Playera de algodón negro",price:220,img:"images/playera_negra.png"},
-  {id:2,name:"Sudadera Gris",desc:"Sudadera con capucha gris",price:450,img:"images/sudadera_gris.png"},
-  {id:3,name:"Jeans Azul",desc:"Jeans ajustados color azul",price:380,img:"images/jeans_azul.png"},
-  {id:4,name:"Chaqueta Negra",desc:"Chaqueta elegante negra",price:600,img:"images/chaqueta_negra.png"},
-  {id:5,name:"Gorra Roja",desc:"Gorra de algodón roja",price:150,img:"images/gorra_roja.png"},
-  {id:6,name:"Playera Blanca",desc:"Playera básica blanca",price:200,img:"images/playera_blanca.png"}
+   {id:1,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:2,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:3,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+   {id:4,name:"Playera Oversize Negra 220g",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
+
 
 const ropaContainer = document.getElementById('ropaProducts');
 const modal = document.getElementById('productModal');
