--- a/perfumes.html
+++ b/perfumes.html
@@ -85,9 +85,34 @@ h1{margin-bottom:40px;margin-top:0;font-family: var(--font-title);}
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
 
-/* Cerrar modal */
-.close{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#000;cursor:pointer;transition:all .3s}
-.close:hover{color:#555;}
+/* BOTÓN CERRAR ARREGLADO */
+.close{
+  position:absolute;
+  top:15px;
+  right:20px;
+  font-size:32px;
+  font-weight:bold;
+  color:#000;
+  cursor:pointer;
+  transition:all .3s;
+  z-index:3000;
+  background:rgba(255,255,255,0.9);
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  line-height:1;
+  user-select:none;
+  border:2px solid rgba(0,0,0,0.1);
+}
+.close:hover{
+  color:#fff;
+  background:#000;
+  transform:scale(1.1);
+  border-color:#000;
+}
 
 /* RESPONSIVE MODAL */
 @media(max-width:1024px){
