--- a/index.html
+++ b/index.html
@@ -97,8 +97,34 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 #quantity{width:50px;text-align:center;border:1px solid var(--color-accent);border-radius:6px;padding:6px;font-size:1rem}
 .add-cart{background:#000;color:#fff;padding:14px;border:none;cursor:pointer;width:100%;border-radius:8px;font-size:1rem;font-weight:600;transition:all .3s}
 .add-cart:hover{background:#333;transform:translateY(-2px)}
-.close{position:absolute;top:10px;right:15px;font-size:28px;font-weight:bold;color:#000;cursor:pointer;transition:all .3s}
-.close:hover{color:#555;}
+/* BOTÓN CERRAR ARREGLADO */
+.close{
+  position:absolute;
+  top:15px;
+  right:20px;
+  font-size:32px;
+  font-weight:bold;
+  color:#000;
+  cursor:pointer;
+  transition:all .3s;
+  z-index:3000;
+  background:rgba(255,255,255,0.9);
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  line-height:1;
+  user-select:none;
+  border:2px solid rgba(0,0,0,0.1);
+}
+.close:hover{
+  color:#fff;
+  background:#000;
+  transform:scale(1.1);
+  border-color:#000;
+}
 @media(max-width:1024px){
   .modal-content{flex-direction:column;width:95%;}
   .modal-left img{height:280px;object-fit:cover;}
